# ingenius-inventory-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  entrypoint.sh  podman-setup.sh
entity/: Cargo.toml
entity/src/: classroom.rs  delivery.rs  lib.rs  list_detail.rs  money_delivery.rs  purchase.rs  purchase_detail.rs  request.rs  request_detail.rs  school_supply_balance.rs  student.rs  user.rs  util.rs  utils_delivery.rs  utils_delivery_detail.rs  utils_list.rs
src/: db.rs  main.rs
src/auth/: mod.rs
src/auth/controllers/: handlers.rs
src/auth/dtos/: claims.rs  login.rs  mod.rs  register.rs  response.rs
src/auth/middleware/: auth_middleware.rs
src/auth/services/: auth_service.rs
src/classroom/controllers/: controllers.rs  handlers.rs
src/classroom/dtos/: classroom_response.rs  create_classroom.rs  mod.rs  update_classroom.rs
src/classroom/routes/: mod.rs
src/classroom/services/: classroom_services.rs  mod.rs
src/delivery/controllers/: handlers.rs
src/delivery/dtos/: create_delivery.rs  delivery_response.rs  mod.rs  update_delivery.rs
src/delivery/routes/: mod.rs
src/delivery/services/: delivery_services.rs  mod.rs
src/list_detail/controllers/: handlers.rs
src/list_detail/dtos/: create_list_detail.rs  mod.rs  update_list_detail.rs
src/list_detail/routes/: mod.rs
src/list_detail/services/: list_detail_services.rs  mod.rs
src/money_delivery/controllers/: handlers.rs
src/money_delivery/dtos/: create_money_delivery.rs  mod.rs  response.rs  update_money_delivery.rs
src/money_delivery/routes/: mod.rs
src/user/: mod.rs
(+84 files in other folders)
