[package]
name = "ingenius-inventory-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
sea-orm = { version = "1.1.4", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros"] }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
dotenv = "0.15.0"
entity = { path = "entity"}
openssl = { version = "0.10.70", features = ["vendored"] }
env_logger = "0.11.6"
log = "0.4"
